Fix spacing

--- a/src/components/inline-edit/inline-edit.scss
+++ b/src/components/inline-edit/inline-edit.scss
@@ -157,8 +157,9 @@ zn-textarea::part(textarea) {
 .ai:not(.ai--editing) {
   zn-textarea::part(textarea) {
     box-shadow: none;
-    padding: 0;
-
+    padding-left: 0;
+    padding-right: 0;
+    min-height: 35px;
   }
 }
 
